<resources>
    <string name="app_name">COVID-19\nCoronavirus Update</string>
    <string name="app_name_short">COVID-19</string>

    <string name="close_button">Close Button</string>
    <string name="home">Home</string>
    <string name="all_country">All Country</string>
    <string name="news">News</string>
    <string name="more">More</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="currently_infected_patients">Currently Infected Patients</string>
    <string name="active">Active Cases</string>
    <string name="closed">Closed Cases</string>
    <string name="critical">Critical Cases</string>
    <string name="mild">Mild Cases</string>
    <string name="cases_outcome">Cases which had an outcome</string>
    <string name="corona_cases">Total Coronavirus Cases</string>
    <string name="corona_cases_today">New Coronavirus Cases</string>
    <string name="opps">Opps...</string>
    <string name="somethingWrong">Something went wrong. Please make sure you have working network connection.</string>
    <string name="search">Search by country name</string>
    <string name="total_cases">Total Cases</string>
    <string name="deaths">Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active_cases">Active Cases</string>
    <string name="critical_cases">Critical Cases</string>
    <string name="cases_per_one_million">Cases Per One Million</string>
    <string name="deaths_per_one_million">Deaths Per One Million</string>
    <string name="add_to_home">Add to Home</string>
    <string name="hide">Hide</string>
    <string name="today_cases">Today Cases</string>
</resources>
